--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="sociotype-sparkle-test" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="나는 어떤 사회학 유형일까?" />
+    <meta property="og:description" content="25문항, 1분 만에 알아보는 나의 사회학적 관점! 결과를 공유해보세요." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="나는 어떤 사회학 유형일까?" />
+    <meta name="twitter:description" content="25문항, 1분 만에 알아보는 나의 사회학적 관점! 결과를 공유해보세요." />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
 
   <body>
